--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6568,7 +6568,7 @@ a.close.disabled {
 }
 
 .bg-primary2 {
-    background-image: url("../img/family.jpeg") !important;
+    background-image: url("../img/_african-fam-1900.jpg") !important;
     background-color: #5c4c4c;
     /* Used if the image is unavailable */
     height: 100%;
